display for calculator not showing up but fixed color issue in the background

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: sans-serif;
+    background-image: linear-gradient(to bottom right, rgba(79,51,176,1), rgba(210, 51,176,1),rgb(210,53,165));
 }
 
 a {
@@ -15,24 +16,81 @@ a {
     color: white;
 }
 
-body {
-    background-image: linear-gradient(to bottom right, rgba(rgb(0, 0, 0)), rgba(rgb(255, 255, 255)));
-}
 
 .container {
     height: 100vh;
     width: 100vw;
     display: grid;
-    width: auto;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 30px black;
     place-items: center;
 }
+
+.calculator {
+    position:absolute;
+    height: auto;
+    width: auto;
+    padding: 28px;
+    border-radius: 10px;
+    box-shadow:.0.0.30px black;
+}
+
+table {
+    position: relative;
+    height:auto ;
+    width: auto;
+    padding: 20px;
+    border: 10px;
+    box-shadow: 0 0 30px black;
+    background-color: linear-gradient(blue);
+    border-radius: 10px;
+}
+
+.theme-toggle {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    color: white;
+    cursor: pointer;
+    z-index: -1;
+}
+
+.theme-toggle.active {
+    color: black;
+}
+
+.theme-toggle.active::before {
+    background-color: whitesmoke;
+}
+
+.theme-toggle::before {
+    content: '';
+    height: 30px;
+    width: 30px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    background-color: black;
+    z-index: -1;
+
+}
+
+#display {
+    margin: 0 10px;
+    height: 150px;
+    width: auto;
+    max-width: 270px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-size: 30px;
+    overflow-x: scroll;
+}
+
+
 
 .toggle-icon {
     position: absolute;
     top: 30px;
     right: 30px;
     color: white;
+
 }
